@@ -1,3 +1,4 @@
+* Changed default spacing to 15px (from 8px) (benzea)
 * Correct the height of the primary palette (benzea)
 * Use double leading underscores for callback names to avoid name collisions (erikos)
  
